bug fix, added tweaks for rows and columns

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         padding: 0;
         margin: auto;
       }
+      .tp-dfwv {
+        z-index: 100;
+      }
     </style>
   </head>
   <body>
